# python-libslp

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
src/: Makefile.am  slpmodule.c  test.py
